--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Springs Art Gallery - Maximized Dashboard</title>
+    <title>Springs Art Gallery - Dashboard 2026</title>
     <link rel="stylesheet" href="style.css">
-    <link href="fonts.googleapis.com" rel="stylesheet">
 </head>
 <body>
 
@@ -46,8 +45,13 @@
     </main>
 
     <footer class="gallery-footer">
-        <p>&copy; 2025 Springs Art Gallery. All rights reserved.</p>
+        <p>&copy; 2026 Springs Art Gallery. All rights reserved.</p>
     </footer>
+
+    <!-- Chatbase Integration Script -->
+    <script>
+    (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="gvLKpPJ1G4PU0cKBy0Bz-";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+    </script>
 
 </body>
 </html>
